--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/lumen-framework": "5.1.*",
-        "vlucas/phpdotenv": "~1.0"
+        "vlucas/phpdotenv": "~1.0",
+        "laravel/socialite": "^2.0",
+        "facebook/php-sdk-v4" : "~5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
@@ -18,7 +20,8 @@
             "App\\": "app/"
         },
         "classmap": [
-            "database/"
+            "database/",
+            "app/Repository/"
         ]
     },
     "autoload-dev": {
